@@ -44,14 +44,14 @@ struct denovo_indel_call
     bool
     is_indel() const
     {
-        return (rs.dindel_qphred != 0);
+        return (gt_sum > 0);
     }
 
     // should this indel be written out?
     bool
     is_output() const
     {
-        return (is_indel() || is_forced_output);
+        return (true || is_indel() || is_forced_output);
     }
 
     result_set rs;
@@ -61,4 +61,5 @@ struct denovo_indel_call
     std::vector< std::string > gtstring;
     std::vector< unsigned > gqx;
     std::vector< unsigned > gq;
+    unsigned gt_sum=0;
 };
